adds addNotice function
