# src/controllers/notices/addNotice.js
@@ -2,23 +2,22 @@ const { Notice } = require("../../db/models");
 const { RequestError } = require("../../helpers");
 const { ctrlWrapper } = require("../../middlewares");
 
-// const imagesDir = path.join(__dirname, "../../", "public", "pets-photo");
-
 const addNotice = async (req, res) => {
-  const { _id: owner } = req.user;
-  const { category } = req.query;
+  // const { _id: owner } = req.user;
+  const owner = "645d2f7a502bb608851a31f4";
+  const { category } = req.params;
   if (!req.body) {
     throw new RequestError(400, `there is no body content`);
   }
   const noticeData = req.body;
 
-  if (!req.file) {
-    throw new RequestError(400, `no file uploaded`);
-  }
+  // if (!req.file) {
+  //   throw new RequestError(400, `no file uploaded`);
+  // }
 
   const data = req.file
     ? { owner, ...noticeData, category, avatarURL: req.file.path }
-    : { owner, ...noticeData, category, avatarURL: null };
+    : { owner, ...noticeData, category };
 
   const notice = await Notice.create(data);
   if (!notice) {
